# playlog-platform

./: Makefile  README.md
playlog-backend/: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
playlog-backend/docker/minio/: compose.dev.yaml  compose.yaml
playlog-backend/docker/mongo-express/: compose.yaml
playlog-backend/docker/mongodb/multimedia/: compose.dev.yaml  compose.yaml
playlog-backend/docker/mongodb/review/: compose.dev.yaml  compose.yaml
playlog-backend/docker/pgadmin/: compose.yaml
playlog-backend/docker/postgres/catalogue/: compose.dev.yaml  compose.yaml
playlog-backend/docker/postgres/user/: compose.dev.yaml  compose.yaml
playlog-backend/services/api-gateway/: Cargo.toml  Dockerfile  compose.yaml
playlog-backend/services/api-gateway/src/: app.rs  config.rs  docs.rs  error.rs  main.rs  proxy.rs  setup.rs
playlog-backend/services/catalogue-service/: Cargo.toml  Dockerfile  Makefile  compose.yaml
playlog-backend/services/catalogue-service/.sqlx/: query-0142e83fc99cfb918ac99f49f74498d9c24cf170d6047021bd521157db05d7bd.json  query-01cd0a8c022d09b9d0eb5d31b5989850dfe8b75c61f70f2155003b79ec264fe4.json  query-041de9849a54a3bc3df29a600929e8b159269384be2ad9abb54dc88c40268985.json  query-0f256182a4d6befd391f903795b62e0cfff54600d96872a93a55ee621f98c961.json  query-11014136290109988ed24695d2859088e971901f7286f9c82f383abc17c1a625.json  query-1426d6f0636192f4ce67746bdfbb21d4f26ab877ffcfee9fe4ef7c40e3086223.json  query-1ba4212bf18e6bdd926318b61ce0e23f09ddddbaa5c4fb5d20581268e9f37969.json  query-1c35ef82d8821ab151f76f2521f5531a91b31bddb38069f18cda3d43f97e0ac2.json  query-20d5809562e7edd7f4ff1c1e9bc52d1f0b218fec364556ac88d63a13eb0db093.json  query-250d5eb03458a3c76831de79f7d1994a395b81929b5cf2377b9f1ea1290d71f6.json  query-27f93b43af32be6f1df2de8214415a5f7a085e465dc0d791317bc4f5baf6bfd2.json  query-2f9002f171c8f3b44b17121c8d71c1bbb4c6066180f019c7abede6e447465240.json  query-36fd89a02de1dc3f6132802bbf219bfa66c92441ea8375a9f1e906215248f0e3.json  query-37d33d73ad40923bd8b54c999596aa41c9b9eeb221cf745072e9e8eef535e48f.json  query-389df999af55a8e5d6bb4d27fe2ab2b5b5af21183a0bdced10e081eb17de1ae9.json  query-38e8ae759384945f85d808a3cf38feb0107a31735ccb37e1e2f45ed317a55093.json  query-3b8bf34cfaed8a50afc54f8091cdd5ebb18a2ea43f8c6c5051f6eb1aa3bb14c8.json  query-3f53f9af930bdcdbf2031ddfcd4cc4db70e909aadbdfddeeec3269b2f6f16de9.json  query-468accfd9f8d563fcfdab5d841534501385d9e361bd9b1d15ba819ead4e61b7c.json  query-4fc40a97f840524f9f78e99ea17c53a3e69695dbfada4aacc5aea7979e1e25ac.json  query-551be631bbb9b5a520aaf058a543429dca0d1d372b118caf13df3cb59530b7b2.json  query-5643e4b7a0fbbdde5e5e295f2b15fddfc6ed6ae1a0b5d74501e9f4b0e0643726.json  query-5ad180ec8a74e689d212921db6dac2d03ce3cc64e5b287e04157fad12bc655c3.json  query-62db1384870c6b864034dc5e19170f65d50fb71aa660b20d21c6a2565545d65e.json  query-665f7576e23e2b84e0b10463af29f6ef4d8a9412981ea70eb585985af8cd5029.json  query-67ca58451029865969197ce31af58067b28cbacfd025cf6c4d1248839524f62a.json  query-68c1ca59c4e75ac4835ebfe5f5c1d6d573527f28faac3513e3fa112b5b4e1854.json  query-69cac7464b37013bd3b5cb4f2bb05d00e1241142c247540732d9647ba98994cd.json  query-6a0422d1d274b5c1880f3d7adcbf1555cf1b1caa405b4fd7a3bc0e5fda4156c7.json  query-6d17c75d237cfd2f19f4c7f0b39aefdd9b34930a5e28c745b26d65475155e3d1.json  query-7055f9dc6fec0cc2d7d9fbf28b2459948c48726a234481795d76b9b69e063817.json  query-76a06851cd3b4e6b2e802ca162eaadb04f689a76dbeaf204da4b98ea300c242a.json  query-783c0a09dcc30693f59c43a6529f3fa6c02db115c08319abf4749f57f8008b0b.json  query-7e8739f2f34f59f011e9cb6cef3835de76048badb7e2c0f8307103a4588e13af.json  query-7eced79fbdfb5f6ec1e5cc68acd2fd955c2148754064389fbb6855bc4740485d.json  query-800ef00aaef01b88406e5d85abc650ff6701c7458cf53852976a1da0048b2cb3.json  query-80961685847390374eff1568c238c0c40b9b1d96508bd37c55c524f8216547d0.json  query-8f3698eb379842ba48354095fc671ceed65a5fc7829bdb0f78c0f61476209795.json  query-af9c037d59c04555dddcc47baa8f0c239041191c91132e02f1eb91b96cd31b81.json  query-b18de8fd33a0520842f83b2a81d5180f5b28e1cc96f8ee894471e0d671c4fba7.json  (+12 more)
playlog-backend/services/catalogue-service/migrations/: 20260218212643_init.down.sql  20260218212643_init.up.sql  20260327221625_add_version_column.down.sql  20260327221625_add_version_column.up.sql
playlog-backend/services/catalogue-service/src/: app.rs  config.rs  developers.rs  docs.rs  entity.rs  games.rs  genres.rs  main.rs  platforms.rs  publishers.rs  tags.rs
playlog-backend/services/library-service/: Cargo.toml  Dockerfile  Makefile  compose.yaml
playlog-backend/services/library-service/.sqlx/: query-4fd4eead521db51b6ee8f82bb1fc371cf25d98f6f309aaaa9d9794773e2a352c.json  query-7cd3ba3600e8b6ec83eff41647fbf575310e6534e38bbdc7ce5bd15159110e2a.json  query-a46a67342ac70444bec4c75e581309ea9740073150856a22274ab0bde319702d.json  query-cb59fac221bc965ea70f97d654993b35c8c4962261c8d45f00205a3ecaadc5ce.json
playlog-backend/services/library-service/migrations/: 20260322223104_init.down.sql  20260322223104_init.up.sql
playlog-backend/services/library-service/src/: app.rs  config.rs  docs.rs  dto.rs  error.rs  handler.rs  main.rs  model.rs  repository.rs  service.rs  setup.rs
playlog-backend/services/mulitimedia-service/: Cargo.toml
playlog-backend/services/multimedia-service/: Cargo.toml  Dockerfile  Makefile  compose.yaml
playlog-backend/services/multimedia-service/src/: app.rs  config.rs  docs.rs  dto.rs  error.rs  handler.rs  main.rs  model.rs  repository.rs  service.rs  setup.rs
playlog-backend/services/review-service/: Cargo.toml  Dockerfile  Makefile  compose.yaml
playlog-backend/services/review-service/src/: app.rs  comment.rs  (+7 more)
playlog-backend/services/user-service/: Cargo.toml  Dockerfile  Makefile  compose.yaml
playlog-backend/shared/api-error/: Cargo.toml
playlog-backend/shared/jwt-common/: Cargo.toml
playlog-backend/shared/service-common/: Cargo.toml
scripts/: .gitignore  README.md  get_games.py  pyproject.toml  seed_catalogue.py  seed_comments.py  seed_db.py  seed_library.py  seed_media.py  seed_reports.py  seed_reviews.py  seed_users.py
(+294 files in other folders)
