[workspace]
members = ["services/*", "shared/*"]
resolver = "3"

[workspace.dependencies]
# --- Async runtime & HTTP ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
axum = { version = "0.8" }
axum-macros = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1"

# --- Serialization and validation ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
once_cell = "1.21"

# --- Config ---
dotenvy = "0.15"
config = "0.15"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Auth & security ---
jsonwebtoken = "10"
argon2 = "0.5"
rand = "0.9"

# --- Async utils ---
async-trait = "0.1"
futures = "0.3"

# --- Logging ---
tracing = "0.1"

# --- Databases ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
mongodb = "3"

# --- OpenAPI Documentation ---
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- Shared ---
api-error = { path = "shared/api-error" }