[workspace]
members = ["services/*", "shared/*"]
resolver = "3"

[workspace.dependencies]
# --- Async runtime & HTTP ---
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["cookie", "multipart", "query"] }
axum-macros = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace", "cors"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }

# --- Serialization and validation ---
bson = { version = "3", features = ["chrono-0_4"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
once_cell = "1.21"

# --- Config ---
dotenvy = "0.15"
config = "0.15"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Auth & security ---
jsonwebtoken = { version = "10", features = ["rust_crypto", "use_pem"] }
argon2 = "0.5"
cookie = "0.18"

# --- Async ---
async-trait = "0.1"
futures = "0.3"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# --- Databases and Storage ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
mongodb = { version = "3.5", features = ["bson-3", "compat-3-0-0"] }
minio = { git = "https://github.com/minio/minio-rs.git", rev = "e73fa10", default-features = false, features = ["rustls-tls", "default-crypto"] }

# --- OpenAPI Documentation ---
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- Shared ---
api-error = { path = "shared/api-error" }
jwt-common = { path = "shared/jwt-common" }
service-common = { path = "shared/service-common" }