[package]
name = "catalogue-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
api-error.workspace = true
async-trait.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jwt-common.workspace = true
serde.workspace = true
service-common.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
validator.workspace = true