[package]
name = "service-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
mongodb.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
validator.workspace = true